# LR7

./: CMakeLists.txt  Task_1.cpp  Task_2.cpp  Task_3.cpp  Task_4.cpp  Task_5.cpp  Tasks_THREAD.cpp
